ITR-11 Implemented characters profile components, refactored, fixed issues
